--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "pug": "^3.0.2"
